objects/MCM_Yields__c.object
<CustomObject>
    <description>Use to save following MCM Yields
--MCM Test Yield
--Burn-In User Defined Yield
--Module Assembly Yield</description>
    <fields>
        <fullName>MCM__c</fullName>
        <label>MCM</label>
        <referenceTo>PCM_MCM_Detail__c</referenceTo>
        <relationshipLabel>MCM Yields</relationshipLabel>
        <relationshipName>MCM_Yields</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Q10__c</fullName>
        <label>Q10</label>
        <precision>8</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q11__c</fullName>
        <label>Q11</label>
        <precision>8</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q12__c</fullName>
        <label>Q12</label>
        <precision>8</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <label>MCM Yields</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>MCM Yields Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MCM Yields</pluralLabel>
    <recordTypes>
        <fullName>MCM_Assembly_Yield</fullName>
        <active>true</active>
        <label>Assembly Yield</label>
    </recordTypes>
    <recordTypes>
        <fullName>MCM_Burn_In_User_Defined_Yield</fullName>
        <active>true</active>
        <label>Burn-In User Defined</label>
    </recordTypes>
    <recordTypes>
        <fullName>MCM_Test_Yield</fullName>
        <active>true</active>
        <label>Test Yield</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>